gl_ext_api.h


typedef char GLbyte;

typedef char GLcharARB;

typedef double GLdouble;

typedef float GLfloat;

typedef int GLint;

typedef int GLsizei;

typedef signed int GLintptrARB;

typedef signed int GLsizeiptrARB;

typedef short GLshort;

typedef unsigned char GLboolean;

typedef unsigned char GLubyte;

typedef unsigned int GLenum;

typedef unsigned int GLhandleARB;

typedef unsigned int GLsizei;

typedef unsigned int GLuint;

typedef unsigned short GLushort;

typedef void GLvoid;

void VertexAttrib4bvARB(GLuint, const GLbyte *);

void VertexAttrib4dARB(GLuint, GLdouble, GLdouble, GLdouble, GLdouble);

void VertexAttrib4dvARB(GLuint, const GLdouble *);

void VertexAttrib4fARB(GLuint, GLfloat, GLfloat, GLfloat, GLfloat);

void VertexAttrib4fvARB(GLuint, const GLfloat *);

void VertexAttrib4ivARB(GLuint, const GLint *);

void VertexAttrib4sARB(GLuint, GLshort, GLshort, GLshort, GLshort);

void VertexAttrib4svARB(GLuint, const GLshort *);

void VertexAttrib4ubvARB(GLuint, const GLubyte *);

void VertexAttrib4uivARB(GLuint, const GLuint *);

void VertexAttrib4usvARB(GLuint, const GLushort *);

void VertexAttribPointerARB(GLuint, GLint, GLenum, GLboolean, GLsizei, const GLvoid *);

void EnableVertexAttribArrayARB(GLuint);

void DisableVertexAttribArrayARB(GLuint);

void ProgramStringARB(GLenum, GLenum, GLsizei, const GLvoid *);

void BindProgramARB(GLenum, GLuint);

void DeleteProgramsARB(GLsizei, const GLuint *);

void GenProgramsARB(GLsizei, GLuint *);

void ProgramEnvParameter4dARB(GLenum, GLuint, GLdouble, GLdouble, GLdouble, GLdouble);

void ProgramEnvParameter4dvARB(GLenum, GLuint, const GLdouble *);

void ProgramEnvParameter4fARB(GLenum, GLuint, GLfloat, GLfloat, GLfloat, GLfloat);

void ProgramEnvParameter4fvARB(GLenum, GLuint, const GLfloat *);

void ProgramLocalParameter4dARB(GLenum, GLuint, GLdouble, GLdouble, GLdouble, GLdouble);

void ProgramLocalParameter4dvARB(GLenum, GLuint, const GLdouble *);

void ProgramLocalParameter4fARB(GLenum, GLuint, GLfloat, GLfloat, GLfloat, GLfloat);

void ProgramLocalParameter4fvARB(GLenum, GLuint, const GLfloat *);

void GetProgramEnvParameterdvARB(GLenum, GLuint, GLdouble *);

void GetProgramEnvParameterfvARB(GLenum, GLuint, GLfloat *);

void GetProgramLocalParameterdvARB(GLenum, GLuint, GLdouble *);

void GetProgramLocalParameterfvARB(GLenum, GLuint, GLfloat *);

void GetProgramivARB(GLenum, GLenum, GLint *);

void GetProgramStringARB(GLenum, GLenum, GLvoid *);

void GetVertexAttribdvARB(GLuint, GLenum, GLdouble *);

void GetVertexAttribfvARB(GLuint, GLenum, GLfloat *);

void GetVertexAttribivARB(GLuint, GLenum, GLint *);

void GetVertexAttribPointervARB(GLuint, GLenum, GLvoid* *);

GLboolean IsProgramARB(GLuint);


void BindBufferARB(GLenum, GLuint);

void DeleteBuffersARB(GLsizei, const GLuint *);

void GenBuffersARB(GLsizei, GLuint *);

GLboolean IsBufferARB(GLuint);

void BufferDataARB(GLenum, GLsizeiptrARB, const GLvoid *, GLenum);

void BufferSubDataARB(GLenum, GLintptrARB, GLsizeiptrARB, const GLvoid *);

void GetBufferSubDataARB(GLenum, GLintptrARB, GLsizeiptrARB, GLvoid *);

GLvoid* MapBufferARB(GLenum, GLenum);

GLboolean UnmapBufferARB(GLenum);

void GetBufferParameterivARB(GLenum, GLenum, GLint *);

void GetBufferPointervARB(GLenum, GLenum, GLvoid* *);


void GenQueriesARB(GLsizei, GLuint *);

void DeleteQueriesARB(GLsizei, const GLuint *);

GLboolean IsQueryARB(GLuint);

void BeginQueryARB(GLenum, GLuint);

void EndQueryARB(GLenum);

void GetQueryivARB(GLenum, GLenum, GLint *);

void GetQueryObjectivARB(GLuint, GLenum, GLint *);

void GetQueryObjectuivARB(GLuint, GLenum, GLuint *);


void DeleteObjectARB(GLhandleARB);

GLhandleARB GetHandleARB(GLenum);

void DetachObjectARB(GLhandleARB, GLhandleARB);

GLhandleARB CreateShaderObjectARB(GLenum);

void ShaderSourceARB(GLhandleARB, GLsizei, const GLcharARB **, const GLint *);

void CompileShaderARB(GLhandleARB);

GLhandleARB CreateProgramObjectARB(void);

void AttachObjectARB(GLhandleARB, GLhandleARB);

void LinkProgramARB(GLhandleARB);

void UseProgramObjectARB(GLhandleARB);

void ValidateProgramARB(GLhandleARB);

void Uniform1fARB(GLint, GLfloat);

void Uniform2fARB(GLint, GLfloat, GLfloat);

void Uniform3fARB(GLint, GLfloat, GLfloat, GLfloat);

void Uniform4fARB(GLint, GLfloat, GLfloat, GLfloat, GLfloat);

void Uniform1iARB(GLint, GLint);

void Uniform2iARB(GLint, GLint, GLint);

void Uniform3iARB(GLint, GLint, GLint, GLint);

void Uniform4iARB(GLint, GLint, GLint, GLint, GLint);

void Uniform1fvARB(GLint, GLsizei, GLfloat *);

void Uniform2fvARB(GLint, GLsizei, GLfloat *);

void Uniform3fvARB(GLint, GLsizei, GLfloat *);

void Uniform4fvARB(GLint, GLsizei, GLfloat *);

void Uniform1ivARB(GLint, GLsizei, GLint *);

void VertexAttrib4fARB(GLuint, GLfloat, GLfloat, GLfloat, GLfloat);

void VertexAttrib4sARB(GLuint, GLshort, GLshort, GLshort, GLshort);

void VertexAttrib4dARB(GLuint, GLdouble, GLdouble, GLdouble, GLdouble);

void VertexAttrib4fvARB(GLuint, const GLfloat *);

void VertexAttrib4svARB(GLuint, const GLshort *);

void VertexAttrib4dvARB(GLuint, const GLdouble *);

void VertexAttrib4ivARB(GLuint, const GLint *);

void VertexAttrib4bvARB(GLuint, const GLbyte *);

void VertexAttrib4ubvARB(GLuint, const GLubyte *);

void VertexAttrib4usvARB(GLuint, const GLushort *);

void VertexAttrib4uivARB(GLuint, const GLuint *);

void VertexAttribPointerARB(GLuint, GLint, GLenum, GLboolean, GLsizei, const GLvoid *);

void EnableVertexAttribArrayARB(GLuint);

void DisableVertexAttribArrayARB(GLuint);

void GetVertexAttribdvARB(GLuint, GLenum, GLdouble *);

void GetVertexAttribfvARB(GLuint, GLenum, GLfloat *);

void GetVertexAttribivARB(GLuint, GLenum, GLint *);

void GetVertexAttribPointervARB(GLuint, GLenum, GLvoid **);