gl_ext_api.scm

      (foreign-lambda void "VertexAttrib4bvARB" unsigned-integer c-string)))
  (begin
    (define VertexAttrib4dARB
      (foreign-lambda
        void
        "VertexAttrib4dARB"
        unsigned-integer
        double
        double
        double
        double)))
  (begin
    (define VertexAttrib4dvARB
      (foreign-lambda void "VertexAttrib4dvARB" unsigned-integer f64vector)))
  (begin
    (define VertexAttrib4fARB
      (foreign-lambda
        void
        "VertexAttrib4fARB"
        unsigned-integer
        float
        float
        float
        float)))
  (begin
    (define VertexAttrib4fvARB
      (foreign-lambda void "VertexAttrib4fvARB" unsigned-integer f32vector)))
  (begin
    (define VertexAttrib4ivARB
      (foreign-lambda void "VertexAttrib4ivARB" unsigned-integer s32vector)))
  (begin
    (define VertexAttrib4sARB
      (foreign-lambda
        void
        "VertexAttrib4sARB"
        unsigned-integer
        short
        short
        short
        short)))
  (begin
    (define VertexAttrib4svARB
      (foreign-lambda void "VertexAttrib4svARB" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib4ubvARB
      (foreign-lambda void "VertexAttrib4ubvARB" unsigned-integer u8vector)))
  (begin
    (define VertexAttrib4uivARB
      (foreign-lambda void "VertexAttrib4uivARB" unsigned-integer u32vector)))
  (begin
    (define VertexAttrib4usvARB
      (foreign-lambda void "VertexAttrib4usvARB" unsigned-integer u16vector)))
  (begin
    (define VertexAttribPointerARB
      (foreign-lambda
        void
        "VertexAttribPointerARB"
        unsigned-integer
        integer
        unsigned-integer
        unsigned-char
        unsigned-integer
        (c-pointer void))))
  (begin
    (define EnableVertexAttribArrayARB
      (foreign-lambda void "EnableVertexAttribArrayARB" unsigned-integer)))
  (begin
    (define DisableVertexAttribArrayARB
      (foreign-lambda void "DisableVertexAttribArrayARB" unsigned-integer)))
  (begin
    (define ProgramStringARB
      (foreign-lambda
        void
        "ProgramStringARB"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define BindProgramARB
      (foreign-lambda
        void
        "BindProgramARB"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define DeleteProgramsARB
      (foreign-lambda void "DeleteProgramsARB" unsigned-integer u32vector)))
  (begin
    (define GenProgramsARB
      (foreign-lambda void "GenProgramsARB" unsigned-integer u32vector)))
  (begin
    (define ProgramEnvParameter4dARB
      (foreign-lambda
        void
        "ProgramEnvParameter4dARB"
        unsigned-integer
        unsigned-integer
        double
        double
        double
        double)))
  (begin
    (define ProgramEnvParameter4dvARB
      (foreign-lambda
        void
        "ProgramEnvParameter4dvARB"
        unsigned-integer
        unsigned-integer
        f64vector)))
  (begin
    (define ProgramEnvParameter4fARB
      (foreign-lambda
        void
        "ProgramEnvParameter4fARB"
        unsigned-integer
        unsigned-integer
        float
        float
        float
        float)))
  (begin
    (define ProgramEnvParameter4fvARB
      (foreign-lambda
        void
        "ProgramEnvParameter4fvARB"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define ProgramLocalParameter4dARB
      (foreign-lambda
        void
        "ProgramLocalParameter4dARB"
        unsigned-integer
        unsigned-integer
        double
        double
        double
        double)))
  (begin
    (define ProgramLocalParameter4dvARB
      (foreign-lambda
        void
        "ProgramLocalParameter4dvARB"
        unsigned-integer
        unsigned-integer
        f64vector)))
  (begin
    (define ProgramLocalParameter4fARB
      (foreign-lambda
        void
        "ProgramLocalParameter4fARB"
        unsigned-integer
        unsigned-integer
        float
        float
        float
        float)))
  (begin
    (define ProgramLocalParameter4fvARB
      (foreign-lambda
        void
        "ProgramLocalParameter4fvARB"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define GetProgramEnvParameterdvARB
      (foreign-lambda
        void
        "GetProgramEnvParameterdvARB"
        unsigned-integer
        unsigned-integer
        f64vector)))
  (begin
    (define GetProgramEnvParameterfvARB
      (foreign-lambda
        void
        "GetProgramEnvParameterfvARB"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define GetProgramLocalParameterdvARB
      (foreign-lambda
        void
        "GetProgramLocalParameterdvARB"
        unsigned-integer
        unsigned-integer
        f64vector)))
  (begin
    (define GetProgramLocalParameterfvARB
      (foreign-lambda
        void
        "GetProgramLocalParameterfvARB"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define GetProgramivARB
      (foreign-lambda
        void
        "GetProgramivARB"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetProgramStringARB
      (foreign-lambda
        void
        "GetProgramStringARB"
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define GetVertexAttribdvARB
      (foreign-lambda
        void
        "GetVertexAttribdvARB"
        unsigned-integer
        unsigned-integer
        f64vector)))
  (begin
    (define GetVertexAttribfvARB
      (foreign-lambda
        void
        "GetVertexAttribfvARB"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define GetVertexAttribivARB
      (foreign-lambda
        void
        "GetVertexAttribivARB"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetVertexAttribPointervARB
      (foreign-lambda
        void
        "GetVertexAttribPointervARB"
        unsigned-integer
        unsigned-integer
        (c-pointer (c-pointer void)))))
  (begin
    (define IsProgramARB
      (foreign-lambda unsigned-char "IsProgramARB" unsigned-integer)))
  (begin
    (define BindBufferARB
      (foreign-lambda void "BindBufferARB" unsigned-integer unsigned-integer)))
  (begin
    (define DeleteBuffersARB
      (foreign-lambda void "DeleteBuffersARB" unsigned-integer u32vector)))
  (begin
    (define GenBuffersARB
      (foreign-lambda void "GenBuffersARB" unsigned-integer u32vector)))
  (begin
    (define IsBufferARB
      (foreign-lambda unsigned-char "IsBufferARB" unsigned-integer)))
  (begin
    (define BufferDataARB
      (foreign-lambda
        void
        "BufferDataARB"
        unsigned-integer
        integer
        (c-pointer void)
        unsigned-integer)))
  (begin
    (define BufferSubDataARB
      (foreign-lambda
        void
        "BufferSubDataARB"
        unsigned-integer
        integer
        integer
        (c-pointer void))))
  (begin
    (define GetBufferSubDataARB
      (foreign-lambda
        void
        "GetBufferSubDataARB"
        unsigned-integer
        integer
        integer
        (c-pointer void))))
  (begin
    (define MapBufferARB
      (foreign-lambda
        (c-pointer void)
        "MapBufferARB"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define UnmapBufferARB
      (foreign-lambda unsigned-char "UnmapBufferARB" unsigned-integer)))
  (begin
    (define GetBufferParameterivARB
      (foreign-lambda
        void
        "GetBufferParameterivARB"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetBufferPointervARB
      (foreign-lambda
        void
        "GetBufferPointervARB"
        unsigned-integer
        unsigned-integer
        (c-pointer (c-pointer void)))))
  (begin
    (define GenQueriesARB
      (foreign-lambda void "GenQueriesARB" unsigned-integer u32vector)))
  (begin
    (define DeleteQueriesARB
      (foreign-lambda void "DeleteQueriesARB" unsigned-integer u32vector)))
  (begin
    (define IsQueryARB
      (foreign-lambda unsigned-char "IsQueryARB" unsigned-integer)))
  (begin
    (define BeginQueryARB
      (foreign-lambda void "BeginQueryARB" unsigned-integer unsigned-integer)))
  (begin
    (define EndQueryARB (foreign-lambda void "EndQueryARB" unsigned-integer)))
  (begin
    (define GetQueryivARB
      (foreign-lambda
        void
        "GetQueryivARB"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetQueryObjectivARB
      (foreign-lambda
        void
        "GetQueryObjectivARB"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetQueryObjectuivARB
      (foreign-lambda
        void
        "GetQueryObjectuivARB"
        unsigned-integer
        unsigned-integer
        u32vector)))
  (begin
    (define DeleteObjectARB
      (foreign-lambda void "DeleteObjectARB" unsigned-integer)))
  (begin
    (define GetHandleARB
      (foreign-lambda unsigned-integer "GetHandleARB" unsigned-integer)))
  (begin
    (define DetachObjectARB
      (foreign-lambda
        void
        "DetachObjectARB"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define CreateShaderObjectARB
      (foreign-lambda
        unsigned-integer
        "CreateShaderObjectARB"
        unsigned-integer)))
  (begin
    (define ShaderSourceARB
      (foreign-lambda
        void
        "ShaderSourceARB"
        unsigned-integer
        unsigned-integer
        (c-pointer (c-pointer (const char)))
        s32vector)))
  (begin
    (define CompileShaderARB
      (foreign-lambda void "CompileShaderARB" unsigned-integer)))
  (begin
    (define CreateProgramObjectARB
      (foreign-lambda unsigned-integer "CreateProgramObjectARB")))
  (begin
    (define AttachObjectARB
      (foreign-lambda
        void
        "AttachObjectARB"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define LinkProgramARB
      (foreign-lambda void "LinkProgramARB" unsigned-integer)))
  (begin
    (define UseProgramObjectARB
      (foreign-lambda void "UseProgramObjectARB" unsigned-integer)))
  (begin
    (define ValidateProgramARB
      (foreign-lambda void "ValidateProgramARB" unsigned-integer)))
  (begin
    (define Uniform1fARB (foreign-lambda void "Uniform1fARB" integer float)))
  (begin
    (define Uniform2fARB
      (foreign-lambda void "Uniform2fARB" integer float float)))
  (begin
    (define Uniform3fARB
      (foreign-lambda void "Uniform3fARB" integer float float float)))
  (begin
    (define Uniform4fARB
      (foreign-lambda void "Uniform4fARB" integer float float float float)))
  (begin
    (define Uniform1iARB (foreign-lambda void "Uniform1iARB" integer integer)))
  (begin
    (define Uniform2iARB
      (foreign-lambda void "Uniform2iARB" integer integer integer)))
  (begin
    (define Uniform3iARB
      (foreign-lambda void "Uniform3iARB" integer integer integer integer)))
  (begin
    (define Uniform4iARB
      (foreign-lambda
        void
        "Uniform4iARB"
        integer
        integer
        integer
        integer
        integer)))
  (begin
    (define Uniform1fvARB
      (foreign-lambda
        void
        "Uniform1fvARB"
        integer
        unsigned-integer
        f32vector)))
  (begin
    (define Uniform2fvARB
      (foreign-lambda
        void
        "Uniform2fvARB"
        integer
        unsigned-integer
        f32vector)))
  (begin
    (define Uniform3fvARB
      (foreign-lambda
        void
        "Uniform3fvARB"
        integer
        unsigned-integer
        f32vector)))
  (begin
    (define Uniform4fvARB
      (foreign-lambda
        void
        "Uniform4fvARB"
        integer
        unsigned-integer
        f32vector)))
  (begin
    (define Uniform1ivARB
      (foreign-lambda
        void
        "Uniform1ivARB"
        integer
        unsigned-integer
        s32vector)))
  (begin
